# Agentic-Invoice-Intelligence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py
.github/workflows/: ci.yml  deploy.yml
docs/: PROJECT_OVERVIEW.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/proxy/: route.ts
frontend/src/app/api/upload/: route.ts
sample_invoices/: generate_invoices.py
src/: crew.py  main.py
src/agents/: definitions.py
src/api/: routes.py
src/data/: database.py
src/docs/: invoice_policies.md  vendor_guidelines.md
src/governance/: audit.py  engine.py
src/models/: schemas.py
src/tasks/: definitions.py
src/tools/: anomaly_tools.py  document_tools.py  extraction_tools.py  rag_tools.py  validation_tools.py
tests/: conftest.py  test_api.py  test_database.py  test_extraction.py  test_governance.py  test_models.py
