[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-invoice-intelligence"
version = "1.0.0"
description = "Governance-first multi-agent invoice processing system"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "crewai==0.80.0",
    "pdfplumber==0.11.4",
    "pytesseract==0.3.13",
    "langchain==0.3.14",
    "langchain-openai==0.2.14",
    "chromadb==0.5.23",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
    "reportlab==4.2.5",
    "openai==1.58.1",
    "python-multipart==0.0.20",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
